# i3dr_detect_3d-ros

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: build.yaml
data/cad/: can.stl  can_ref.pcd  gripper_block.stl  gripper_block_front.pcd
hdev/: primitive_detection.hdev  primitive_detection_2.hdev
include/: detect.h  detect_cad_pcl.h  detect_pcl_primitives.h  detect_primitives_pcl.h  load_ply.h
install/: i3dr_detect_3d_https.rosinstall  i3dr_detect_pcl_primitives_https.rosinstall  i3dr_halcon_object_detect_https.rosinstall  i3dr_titania_detect_pcl_primitives_https.rosinstall
launch/: detect.launch  detect_cad.launch  detect_primitive.launch  sample_detect_cad.launch  sample_detect_primitive.launch  test.launch  titania_detect.launch  titania_detect_cad.launch  titania_detect_primitive.launch
rviz/: scene.rviz  scene_cad.rviz  titania.rviz  titania_cad.rviz  titania_prim.rviz
src/: detect.cpp  detect_cad_pcl.cpp  detect_pcl_primitives.cpp  detect_primitives_pcl.cpp  load_ply.cpp  reduce_pcl.cpp
